syntax = "proto3";

package metapb;

option go_package = "github.com/vdaas/vald/apis/grpc/v1/tikv";

// Copied from metapb.proto
message Peer {
  uint64 id = 1;
  uint64 store_id = 2;
  // PeerRole role = 3;
  bool is_witness = 4;
}

message Store {
  uint64 id = 1;
  // Address to handle client requests (kv, cop, etc.)
  string address = 2;
  StoreState state = 3;
  // repeated StoreLabel labels = 4;
  string version = 5;
  // Address to handle peer requests (raft messages from other store).
  // Empty means same as address.
  string peer_address = 6;
  // Status address provides the HTTP service for external components
  string status_address = 7;
  string git_hash = 8;
  // The start timestamp of the current store
  int64 start_timestamp = 9;
  string deploy_path = 10;
  // The last heartbeat timestamp of the store.
  int64 last_heartbeat = 11;
  // If the store is physically destroyed, which means it can never up again.
  bool physically_destroyed = 12;
  // NodeState is used to replace StoreState which will be deprecated in the future.
  // NodeState node_state = 13;
}

enum StoreState {
  Up = 0;
  Offline = 1;
  Tombstone = 2;
}

message Region {
  uint64 id = 1;
  // Region key range [start_key, end_key).
  bytes start_key = 2;
  bytes end_key = 3;
  // RegionEpoch region_epoch = 4;
  repeated Peer peers = 5;
  // Encryption metadata for start_key and end_key. encryption_meta.iv is IV for start_key.
  // IV for end_key is calculated from (encryption_meta.iv + len(start_key)).
  // The field is only used by PD and should be ignored otherwise.
  // If encryption_meta is empty (i.e. nil), it means start_key and end_key are unencrypted.
  // encryptionpb.EncryptionMeta encryption_meta = 6;
  // The flashback state indicates whether this region is in the flashback state.
  // TODO: only check by `flashback_start_ts` in the future. Keep for compatibility now.
  bool is_in_flashback = 7;
  // The start_ts that the current flashback progress is using.
  uint64 flashback_start_ts = 8;
}
